--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with computational genomics and cancer bioinformatics. I'm currently learning full-stack development, developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and researching targeted therapeutics for Acute Myeloid Leukemia with sc-RNA-seq and advancing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">CReSCENT</a> development at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>.</p>
-                  <p class = "fade">You'll usually find me emulating my culinary heroes- Gordon Ramsey and Jamie Olivier, learning new guitar covers, enjoing sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">PM-OICR Translational Genomics Labratory</a>, and building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
+                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
                </div>
                <div class = "about-image fade">
                   <img src="assets/images/about1.jpeg" style = "width:275px;height:275px">
@@ -88,11 +88,20 @@
             <div class="swiper-wrapper">
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
-                     <h5>Research Intern</h5>
+                     <h5>Student Researcher</h5>
                      <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/uhnpmcc.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Research Intern</h5>
+                     <h6>PM-OICR Translational Genomics Labratory</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce fade">
@@ -134,7 +143,7 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Website Developer</h5>
-                     <h6>Frontline Connect</h6>
+                     <h6>Frontline Connect Canada</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
@@ -161,7 +170,7 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Teaching Assistant</h5>
-                     <h6>Spastic Society of Karnataka</h6>
+                     <h6>Karnataka Centre for Developmental Disabilities</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/ssk.png" style = "width:65px;height65px">
@@ -174,7 +183,7 @@
             <div class="swiper-button-prev fade"></div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade">
-            <h6>I'm always interested in growth opportunities for software development or research; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
+            <h6>I'm always interested in growth opportunities for software development or research — here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
       </section>
       <!-- Software Projects -->
@@ -312,10 +321,10 @@
          <div class="container">
             <div class="about-grid">
                <div>
-                  <h4>Always Learning, <a href="#software-projects-mobile"><span class="spaced-underline">Always Coding</span></a></h4>
+                  <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with computational genomics and cancer bioinformatics. I'm currently learning full-stack development, developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and researching targeted therapeutics for Acute Myeloid Leukemia with sc-RNA-seq and advancing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">CReSCENT</a> development at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>.</p>
-                  <p class = "fade">You'll usually find me emulating my culinary heroes- Gordon Ramsey and Jamie Olivier, learning new guitar covers, enjoing sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Translational Genomics Labratory</a>, and building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
+                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -337,11 +346,20 @@
             <div class="swiper-wrapper">
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
-                     <h5>Research Intern</h5>
+                     <h5>Student Researcher</h5>
                      <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/uhnpmcc.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Research Intern</h5>
+                     <h6>PM-OICR Translational Genomics Labratory</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce">
@@ -383,7 +401,7 @@
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
                      <h5>Website Developer</h5>
-                     <h6>Frontline Connect</h6>
+                     <h6>Frontline Connect Canada</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/frontlineconnect.png" style = "width:65px;height65px">
@@ -410,7 +428,7 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Teaching Assistant</h5>
-                     <h6>Spastic Society of Karnataka</h6>
+                     <h6>Karnataka Centre for Developmental Disabilities</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/ssk.png" style = "width:65px;height65px">
@@ -419,7 +437,7 @@
             </div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade-mobile">
-            <h6>I'm always interested in growth opportunities for software development and research; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
+            <h6>I'm always interested in software development or research opportunities — here's my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a></h6>
          </div>
       </section>
       <!-- Software Projects -->
