final update of 2020 lol

--- a/index.html
+++ b/index.html
@@ -106,11 +106,38 @@
                </div>
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
+                     <h5>Co-Founder</h5>
+                     <h6>Ryde AI — Autonomous Vehicles. Democratized.</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
                      <h5>Prime Minister</h5>
                      <h6>York Region Presidents' Council</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Sidewalk Labs</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Kidogo Co.</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce fade">
@@ -129,6 +156,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Software Developer</h5>
+                     <h6>Synbiolic — Microsoft Imagine Cup North American Finalist</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/synbiolic.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce fade">
@@ -203,6 +239,15 @@
                   </div>
                </div>
                <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/wlawt/synbiolic" target = "_blank">Synbiolic</a></h5>
+                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist) </p>
+                  <div class="project-row">
+                     <span class="dot-jupyter-notebook"></span>
+                     <p>Jupyter Notebook</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More!</a></h6>
+                  </div>
+               </div>
+               <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target = "_blank">Polyp Detection</a></h5>
                   <p>Leveraged convolutional neural networks to achieve an accuracy rate 20% higher than industry.</p>
                   <div class="project-row">
@@ -220,7 +265,7 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce fade">
+               <!-- <div class="project small-bounce fade">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/frontline-connect-canada" target = "_blank">Frontline Connect Website</a></h5>
                   <p>Developed the website for a physician-led grassroots Covid-19 relief initiative targeting virtual communication in hospitals.</p>
                   <div class="project-row">
@@ -228,7 +273,7 @@
                      <p>HTML</p>
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
                   </div>
-               </div>
+               </div> -->
             </div>
          </div>
       </section>
@@ -362,6 +407,15 @@
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
                   </div>
                </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Co-Founder</h5>
+                     <h6>Ryde AI — Autonomous Vehicles. Democratized.</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/ryde.png" style = "width:65px;height65px">
+                  </div>
+               </div>
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
@@ -387,6 +441,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/unityhealth.png" style = "width:45px;height45px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Software Developer</h5>
+                     <h6>Synbiolic — Microsoft Imagine Cup North American Finalist</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/synbiolic.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce">
@@ -456,6 +519,15 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
+               <div class="project small-bounce fade">
+                  <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/wlawt/synbiolic" target = "_blank">Synbiolic</a></h5>
+                  <p>Contributed to a client-facing app for computational drug discovery (Microsoft IC North American Finalist) </p>
+                  <div class="project-row">
+                     <span class="dot-jupyter-notebook"></span>
+                     <p>Jupyter Notebook</p>
+                     <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://synbiolicai.netlify.app/" target = "_blank">Learn More!</a></h6>
+                  </div>
+               </div>
                <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target = "_blank">Polyp Detection</a></h5>
                   <p>Leveraged convolutional neural networks to achieve an accuracy rate 20% higher than industry.</p>
@@ -474,7 +546,7 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce fade-mobile">
+               <!-- <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/frontline-connect-canada" target = "_blank">Frontline Connect</a></h5>
                   <p>Developed the website for a physician-led grassroots Covid-19 relief initiative for virtual communication in hospitals.</p>
                   <div class="project-row">
@@ -482,7 +554,7 @@
                      <p>HTML</p>
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.loom.com/share/317594cf7a3140738a28239bd782c288" target = "_blank">Learn More!</a></h6>
                   </div>
-               </div>
+               </div> -->
             </div>
          </div>
       </section>
