--- a/index.html
+++ b/index.html
@@ -425,6 +425,24 @@
                      <img src="assets/images/logos/yrpc.png" style = "width:65px;height65px">
                   </div>
                </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Sidewalk Labs</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/sidewalklabs.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Project Consultant</h5>
+                     <h6>Kidogo Co.</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/kidogo.png" style = "width:65px;height65px">
+                  </div>
+               </div>
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
                      <h5>Summer Intern</h5>
