--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span
                class="txt-rotate fade"
                data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
+               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR PLAYER", "HOCKEY ENTHUSIAST" ]'></span>
          </h3>
          <ul class="socials fa-ul">
             <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "bounce fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
@@ -68,9 +68,10 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">PM-OICR Translational Genomics Labratory</a>, and building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
-                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>, and developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">PM-OICR Translational Cancer Genomics Laboratory</a></p>
+                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
                </div>
+               
                <div class = "about-image fade">
                   <img src="assets/images/about1.jpeg" style = "width:275px;height:275px">
                </div>
@@ -151,7 +152,7 @@
                </div>
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
-                     <h5>Research Volunteer</h5>
+                     <h5>Keenan Research Summer Student</h5>
                      <h6>St. Michaels Research Centre</h6>
                   </div>
                   <div class="experience-logo">
@@ -336,7 +337,6 @@
       </section>
    </div>
    <div class="mobile">
-
       <!-- Landing Page -->
       <header class = "section-1 welcome-text" id="welcome">
          <h1>Suraj Bansal</h1>
@@ -344,7 +344,7 @@
             <span
                class="txt-rotate"
                data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
+               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "COFFEE CONNOISSEUR", "GUITAR PLAYER", "HOCKEY ENTHUSIAST" ]'></span>
          </h3>
          <ul class="socials fa-ul">
             <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "bounce"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
@@ -368,8 +368,8 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Translational Genomics Labratory</a>, and building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
-                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with single-cell transcriptome sequencing at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Translational Genomics Laboratory</a>, and building an open-source<a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
+                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -454,7 +454,7 @@
                </div>
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
-                     <h5>Research Volunteer</h5>
+                     <h5>Keenan Research Summer Student</h5>
                      <h6>St. Michaels Research Centre</h6>
                   </div>
                   <div class="experience-logo">
@@ -601,7 +601,7 @@
       <!-- Footer Section -->
       <section class="footer section-2" id="mobile-contact">
          <div class="container">
-            <div class = "center-text"><img src="assets/images/logo.png" style = "height:40px;width:auto"></div>
+            <div class = "center-text"><a href="#welcome"><img src="assets/images/logo.png" style = "height:40px;width:auto"></a></div>
             <div class="footer-links center-text">
                <ul>
                   <li>
