--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with scRNA-seq at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, building an <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>, and developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at the <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">PM-OICR Translational Cancer Genomics Laboratory</a></p>
-                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching therapeutic combinations in  Acute Myeloid Leukemia hierarchies at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>.</p> 
+                  <p class = "fade">I also love cuisine, guitar, sunrise cardio, and most recently, latte art! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
                </div>
                
                <div class = "about-image fade">
-                  <img src="assets/images/about1.jpeg" style = "width:275px;height:275px">
+                  <img src="assets/images/about1.jpeg" style = "width:225px;height:225px">
                </div>
             </div>
          </div>
@@ -99,7 +99,7 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Research Intern</h5>
-                     <h6>PM-OICR Translational Genomics Labratory</h6>
+                     <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
@@ -282,7 +282,7 @@
       <section class="section section-1" id="consulting-work">
          <div class="container">
             <div class="section-head center-text uppercase fade">
-               <h2>Consulting Work</h2>
+               <h2>Consulting Projects</h2>
             </div>
             <div class="consulting-grid">
                <div class="deck-cover center-text fade">
@@ -368,8 +368,8 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, computational medicine, and global health. I'm currently researching targeted therapeutics for Acute Myeloid Leukemia with single-cell transcriptome sequencing at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>, developing <a href="https://crescent.cloud/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">bioinformatics pipelines</a> at <a href="https://tgl.oicr.on.ca/" target="_blank" class="text-emphasis p-bold p-spaced-underline">Translational Genomics Laboratory</a>, and building an open-source<a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle startup</a>.</p>
-                  <p class = "fade">You'll usually find me exploring different cuisines, playing guitar, enjoying sunrise cardio, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span> — I'm a 17 y/o from Toronto interested in pharmacogenomics, bioinformatics, and global health. I'm currently researching therapeutic combinations in  Acute Myeloid Leukemia hierarchies at <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Centre</a>.</p> 
+                  <p class = "fade">I also love cuisine, guitar, sunrise cardio, and most recently, latte art! Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -401,7 +401,7 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Research Intern</h5>
-                     <h6>PM-OICR Translational Genomics Labratory</h6>
+                     <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/UHN.png" style = "width:65px;height65px">
@@ -580,7 +580,7 @@
       <section class="section section-1" id="consulting-work">
          <div class="container">
             <div class="section-head center-text uppercase fade-mobile">
-               <h2>Consulting Work</h2>
+               <h2>Consulting Projects</h2>
             </div>
             <div class="consulting-grid">
                <div class="deck-cover center-text fade-mobile">
